--- a/css/mobile.css
+++ b/css/mobile.css
@@ -161,7 +161,6 @@
 		padding: 0 20px 30px;
 	}
 	#body div.content {
-		padding: 0 20px;
 		display: inline-block;
 	}
 	#body div.content div,
@@ -213,6 +212,9 @@
 	#body div.content div ul li ul.ob a{
 		color: #004165;
 		text-decoration: none;
+	}
+	#body div.content div ul li ul.ob a.mail{
+		font-size: 16px;
 	}
 	#body div.content div ul li h5 {
 		font-family: 'Montserrat';
