--- a/css/style.css
+++ b/css/style.css
@@ -253,14 +253,24 @@ p a:hover {
 	padding: 12px 0 0;
 	text-align: center;
 	color: #004165;
+	
+	/* Estilo mientras OB este cerrado */
+	
+	color: #b3c6d1;
+	
 }
 
 #body div.content div ul li ul.ob a{
+/*	color: #004165;
+*/	text-decoration: none;
+
+	color: #b3c6d1;
+}
+
+#body div.content div ul li ul.ob b{
 	color: #004165;
 	text-decoration: none;
 }
-
-
 
 #body div.content div ul li h5 {
 	font-family: 'Montserrat';
