--- a/css/style.css
+++ b/css/style.css
@@ -252,8 +252,8 @@ p a:hover {
 	margin: 0;
 	padding: 12px 0 0;
 	text-align: center;
-	color: #004165;
-	
+/*	color: #004165;
+*/	
 	/* Estilo mientras OB este cerrado */
 	
 	color: #b3c6d1;
