--- a/css/mobile.css
+++ b/css/mobile.css
@@ -199,38 +199,24 @@
 		color: #FFFFFF;
 	}
 	
-	#body div.content div ul li ul.ob {
+	#body div.content div ul li ul.mg {
 		font-family: 'Montserrat';
 		font-size: 20px;
 		font-weight: lighter;
 		margin: 0;
 		padding: 12px 0 0;
 		text-align: center;
-/*
 		color: #004165;
-*/
-
-	/* Estilo mientras OB este cerrado */
-	
-	color: #b3c6d1;
 	}
 	
-	#body div.content div ul li ul.ob a{
-/*
+	#body div.content div ul li ul.mg a{
 		color: #004165;
-*/
+
 		text-decoration: none;
-
-	color: #b3c6d1;
 	}
-	#body div.content div ul li ul.ob a.mail{
+	#body div.content div ul li ul.mg a.mail{
 		font-size: 16px;
 	}
-	
-	#body div.content div ul li ul.ob b{
-		color: #004165;
-		text-decoration: none;
-	}	
 	
 	#body div.content div ul li h5 {
 		font-family: 'Montserrat';
@@ -243,19 +229,29 @@
 		color: #FFFFFF;
 	}
 	
-	#body div.content div ul li ul.mg {
+	#body div.content div ul li ul.ob {
 		font-family: 'Montserrat';
 		font-size: 20px;
 		font-weight: lighter;
 		margin: 0;
 		padding: 12px 0 0;
 		text-align: center;
+	/* Estilo mientras OB este cerrado */
+	
+	color: #edc4cb;
 	}
 	
-	#body div.content div ul li ul.mg a{
+	#body div.content div ul li ul.ob a{
+/*		color: #772432;
+*/		text-decoration: none;
+
+	color: #edc4cb;
+	}
+	
+	#body div.content div ul li ul.mg b{
 		color: #772432;
 		text-decoration: none;
-	}
+	}		
 	
 	#body form {
 		margin: 0 auto;
