--- a/css/mobile.css
+++ b/css/mobile.css
@@ -248,7 +248,7 @@
 	color: #edc4cb;
 	}
 	
-	#body div.content div ul li ul.mg b{
+	#body div.content div ul li ul.ob b{
 		color: #772432;
 		text-decoration: none;
 	}		
