--- a/css/style.css
+++ b/css/style.css
@@ -279,19 +279,19 @@ p a:hover {
 	margin: 0;
 	padding: 12px 0 0;
 	text-align: center;
+	color: #772432;
 	
-	/* Estilo mientras OB este cerrado */
-	
-	color: #edc4cb;
+
+/*	color: #edc4cb; */ /* Estilo mientras este cerrado */
 	
 }
 
 #body div.content div ul li ul.ob a{
-/*	color: #772432;
-*/	text-decoration: none;
+	color: #772432;
+	text-decoration: none;
 
 
-	color: #edc4cb;
+/*	color: #edc4cb; */ /* Estilo mientras este cerrado */
 }
 
 #body div.content div ul li ul.ob b{
